      and \code{loo_predictive_interval} for computing
      LOO predictions thanks to Aki Vehtari and Jonah Gabry.
      \item Allow using \code{offset} in formulas
      of non-linear and auxiliary parameters.
      \item Allow sparse matrix multiplication in
      non-linear and distributional models.
      \item Allow using the \code{identity} link for
      all auxiliary parameters.
      \item Introduce method \code{control_params} to
      conveniently extract control parameters of the 
      NUTS sampler.
      \item Introduce argument \code{Iconditions} in
      \code{marginal_effects} for enhanced plotting of 
      two-way interactions.
      \item Improve flexibility of the \code{conditions} 
      argument of \code{marginal_effects}.
      \item Extend method \code{stanplot} to correctly 
      handle some new \code{mcmc_} plots of the 
      \pkg{bayesplot} package.
    }
  }
  \subsection{OTHER CHANGES}{
    \itemize{
      \item Improve the \code{update} method to
      only recompile models when the \pkg{Stan} code
      changes.
      \item Warn about divergent transitions when calling
      \code{summary} or \code{print} on \code{brmsfit} objects.
      \item Warn about unused variables in argument 
      \code{conditions} when calling \code{marginal_effects}.
      \item Export and document several distribution functions 
      that were previously kept internal.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Fix problems with the inclusion of offsets
      occuring for more complicated formulas thanks to 
      Christian Stock.
      \item Fix a bug that led to invalid Stan code when 
      sampling from priors in intercept only models thanks 
      to Tom Wallis.
      \item Correctly check for category specific
      group-level effects in non-ordinal models thanks to
      Wayne Folta.
      \item Fix problems in \code{pp_check} when specifying
      argument \code{newdata} together with arguments 