@@ -261,14 +261,23 @@ predict_exgaussian <- function(i, draws, ...) {
                  lb = draws$data$lb[i], ub = draws$data$ub[i])
 }
 
-predict_wiener <- function(i, draws, col = c("q", "resp"), ...) {
-  args <- list(delta = ilink(get_eta(draws$mu, i), draws$f$link), 
-               alpha = get_auxpar(draws$bs, i = i),
-               tau = get_auxpar(draws$ndt, i = i),
-               beta = get_auxpar(draws$bias, i = i),
-               col = match.arg(col))
-  rng_continuous(nrng = 1, dist = "wiener", args = args, 
-                 lb = draws$data$lb[i], ub = draws$data$ub[i])
+predict_wiener <- function(i, draws, negative_rt = FALSE, ...) {
+  args <- list(
+    delta = ilink(get_eta(draws$mu, i), draws$f$link), 
+    alpha = get_auxpar(draws$bs, i = i),
+    tau = get_auxpar(draws$ndt, i = i),
+    beta = get_auxpar(draws$bias, i = i),
+    types = if (negative_rt) c("q", "resp") else "q"
+  )
+  out <- rng_continuous(
+    nrng = 1, dist = "wiener", args = args, 
+    lb = draws$data$lb[i], ub = draws$data$ub[i]
+  )
+  if (negative_rt) {
+    # code lower bound responses as negative RTs
+    out <- out[["q"]] * ifelse(out[["resp"]], 1, -1)
+  }
+  out
 }
 
 predict_beta <- function(i, draws, ...) {
